Short calling or release names

--- a/OrganizadorReuniao/Views/Calling/Index.cshtml
+++ b/OrganizadorReuniao/Views/Calling/Index.cshtml
@@ -47,7 +47,7 @@ else
                     <td>@call.Date.ToString("dd/MM/yy")</td>
                     <td>@call.Member</td>
                     <td>@call.Name</td>
-                    <td class="@((call.CallingFlag)?"bg-success":"bg-info")">@((call.CallingFlag)?"Chamado":"Desobrigação")</td>
+                    <td class="@((call.CallingFlag)?"bg-success":"bg-info")">@((call.CallingFlag)?"C":"D")</td>
                 </tr>
             }
         </tbody>
