--- a/OrganizadorReuniao/Views/Calling/Index.cshtml
+++ b/OrganizadorReuniao/Views/Calling/Index.cshtml
@@ -8,7 +8,7 @@
 </div>
 
 <div class="row">
-    <input type="button" value="Novo Chamado/Desobrigação" onclick="location.href = '/Calling/New'" style="margin-left: 15px;" class="btn btn-default" />
+    <input type="button" value="Novo Chamado/Desobrigação" onclick="location.href = '/Calling/New'" style="margin-left: 15px;" class="btn btn-primary" />
 </div>
 
 <br />
