--- a/OrganizadorReuniao/Views/Account/Create.cshtml
+++ b/OrganizadorReuniao/Views/Account/Create.cshtml
@@ -31,5 +31,5 @@
     
     <hr />
     
-    <button type="submit" class="btn btn-default">@OrganizadorReuniao.Languages.pt_br.CreateButton</button>
+    <button type="submit" class="btn btn-primary">@OrganizadorReuniao.Languages.pt_br.CreateButton</button>
 }
