--- a/OrganizadorReuniao/Views/Account/Update.cshtml
+++ b/OrganizadorReuniao/Views/Account/Update.cshtml
@@ -33,5 +33,5 @@
     
     <hr />
     
-    <button type="submit" class="btn btn-default">@OrganizadorReuniao.Languages.pt_br.UpdateButton</button>
+    <button type="submit" class="btn btn-primary">@OrganizadorReuniao.Languages.pt_br.UpdateButton</button>
 }
