--- a/OrganizadorReuniao/Views/Activities/Edit.cshtml
+++ b/OrganizadorReuniao/Views/Activities/Edit.cshtml
@@ -57,5 +57,5 @@
     
     <hr />
     
-    <button type="submit" class="btn btn-default">@OrganizadorReuniao.Languages.pt_br.SaveButton</button>
+    <button type="submit" class="btn btn-primary">@OrganizadorReuniao.Languages.pt_br.SaveButton</button>
 }
