--- a/OrganizadorReuniao/Views/Activities/Index.cshtml
+++ b/OrganizadorReuniao/Views/Activities/Index.cshtml
@@ -8,7 +8,7 @@
 </div>
 
 <div class="row">
-    <input type="button" value="Nova Atividade" onclick="location.href = '/Activities/New'" style="margin-left: 15px;" class="btn btn-default" />
+    <input type="button" value="Nova Atividade" onclick="location.href = '/Activities/New'" style="margin-left: 15px;" class="btn btn-primary" />
 </div>
 
 @if (Model.Count == 0)
