--- a/OrganizadorReuniao/Views/Activities/New.cshtml
+++ b/OrganizadorReuniao/Views/Activities/New.cshtml
@@ -75,5 +75,5 @@
     
     <hr />
     
-    <button type="submit" class="btn btn-default">@OrganizadorReuniao.Languages.pt_br.SaveButton</button>
+    <button type="submit" class="btn btn-primary">@OrganizadorReuniao.Languages.pt_br.SaveButton</button>
 }
