--- a/OrganizadorReuniao/Views/Calling/Edit.cshtml
+++ b/OrganizadorReuniao/Views/Calling/Edit.cshtml
@@ -53,5 +53,5 @@
     
     <hr />
     
-    <button type="submit" class="btn btn-default">@OrganizadorReuniao.Languages.pt_br.SaveButton</button>
+    <button type="submit" class="btn btn-primary">@OrganizadorReuniao.Languages.pt_br.SaveButton</button>
 }
