--- a/OrganizadorReuniao/Views/Member/Edit.cshtml
+++ b/OrganizadorReuniao/Views/Member/Edit.cshtml
@@ -61,7 +61,7 @@
     
     <hr />
     
-    <button type="submit" class="btn btn-default">@OrganizadorReuniao.Languages.pt_br.SaveButton</button>
+    <button type="submit" class="btn btn-primary">@OrganizadorReuniao.Languages.pt_br.SaveButton</button>
 }
 
 @section scripts {
