--- a/OrganizadorReuniao/Views/Member/Index.cshtml
+++ b/OrganizadorReuniao/Views/Member/Index.cshtml
@@ -59,7 +59,7 @@
     
     <hr />
     
-    <button type="submit" class="btn btn-default">@OrganizadorReuniao.Languages.pt_br.CreateButton</button>
+    <button type="submit" class="btn btn-primary">@OrganizadorReuniao.Languages.pt_br.CreateButton</button>
 }
 
 @section scripts {
