Show on report only active members

--- a/OrganizadorReuniao/Views/Member/Edit.cshtml
+++ b/OrganizadorReuniao/Views/Member/Edit.cshtml
@@ -25,7 +25,7 @@
     
     <div class="form-group">
         @Html.LabelFor(m => m.BirthDate)
-        @Html.EditorFor(m => m.BirthDate)
+        @Html.EditorFor(m => m.BirthDate) Data Anterior @Model.BirthDate.ToString("dd/MM/yy")
         @Html.ValidationMessageFor(m => m.BirthDate)
     </div>
     
