--- a/OrganizadorReuniao/Views/Memo/Index.cshtml
+++ b/OrganizadorReuniao/Views/Memo/Index.cshtml
@@ -28,7 +28,7 @@
 
 <hr />
 
-<div class="row">
+<div class="row no-print">
     <div class="col-md-12">
         <p class="bg-info" style="padding: 10px;">Ao preencher o formulário os dados serão salvos automaticamente</p>
     </div>
@@ -401,7 +401,7 @@
 </div>
 <br />
 <br />
-<h6 id="updatedOn" style="text-align: center;"></h6>
+<h6 id="updatedOn" style="text-align: center;" class="no-print"></h6>
 <br />
 <br />
 
