--- a/OrganizadorReuniao/Content/Site.css
+++ b/OrganizadorReuniao/Content/Site.css
@@ -82,10 +82,15 @@ img.uncheck {
     background-repeat: no-repeat;
 }
 
-@media print
-{    
-    .no-print, .no-print *
-    {
+@media print {
+
+    * {
+        margin: 0 0 3pt 0 !important;
+        padding: 0 !important;
+        font-size: 8pt;
+    }
+
+    .no-print, .no-print * {
         display: none !important;
     }
 }
