Add list of speakers

--- a/OrganizadorReuniao/Views/Shared/_Layout.cshtml
+++ b/OrganizadorReuniao/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
                         <li><a href="/Memo/Index">Agenda</a></li>
                         <li><a href="/Activities/Index">Atividades</a></li>
                         <li><a href="/Calling/Index">Chamados</a></li>
+                        <li><a href="/Speaker/Index">Discursantes</a></li>
                         <li><a href="/Home/Index">Frequência</a></li>
                         <li><a href="/Member/Index">Novo Membro</a></li>
                         <li><a href="/Report">Relatório</a></li>
