--- a/OrganizadorReuniao/Views/Shared/_Layout.cshtml
+++ b/OrganizadorReuniao/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     @if (!authenticated)
                     {
-                        @*<li><a href="/Account/Create">Criar conta</a></li>*@
+                        <li><a href="/Account/Create">Criar conta</a></li>
                         <li><a href="/Account/Login">Entrar</a></li>
                     }
                     else
