--- a/OrganizadorReuniao/Views/Account/Create.cshtml
+++ b/OrganizadorReuniao/Views/Account/Create.cshtml
@@ -27,6 +27,12 @@
         @Html.ValidationMessageFor(m => m.Confirm)
     </div>
     
+    <div class="form-group">
+        @Html.LabelFor(m => m.UnitName)
+        @Html.EditorFor(m => m.UnitName, new { placeholder = "Nome da Ala" })
+        @Html.ValidationMessageFor(m => m.UnitName)
+    </div>
+    
     @Html.ValidationSummary(OrganizadorReuniao.Languages.pt_br.PleaseCheckTheFollowingErrors, new { @class = "alert alert-danger" })
     
     <hr />
