--- a/OrganizadorReuniao/Views/Memo/Index.cshtml
+++ b/OrganizadorReuniao/Views/Memo/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = OrganizadorReuniao.Languages.pt_br.MemoPageTitle;
     
     // get activities list
-    List<OrganizadorReuniao.Models.Activity> list = new OrganizadorReuniao.Models.Activity().getNextNMonths(3);
+    List<OrganizadorReuniao.Models.Activity> list = new OrganizadorReuniao.Models.Activity().getNextNMonths(3, (int)ViewBag.unit);
 
     // get members list
     List<OrganizadorReuniao.Models.Member> members = new List<OrganizadorReuniao.Models.Member>();
@@ -31,14 +31,14 @@
     }
     else
     {
-        foreach (var person in (new OrganizadorReuniao.Models.Member().getMembers(1)).OrderBy(m => m.LastName).OrderBy(m => m.FirstName).ToList())
+        foreach (var person in (new OrganizadorReuniao.Models.Member().getMembers((int)ViewBag.unit)).OrderBy(m => m.LastName).OrderBy(m => m.FirstName).ToList())
         {
             members.Add(person);       
         }
     }
     
     // get callings list
-    List<OrganizadorReuniao.Models.Calling> callings = new OrganizadorReuniao.Models.Calling().getNextNMonths(3);
+    List<OrganizadorReuniao.Models.Calling> callings = new OrganizadorReuniao.Models.Calling().getNextNMonths(3, (int)ViewBag.unit);
     
     // get hymns list
     List<OrganizadorReuniao.Models.Hymn> hymns = new List<OrganizadorReuniao.Models.Hymn>();
@@ -56,7 +56,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <h2>@OrganizadorReuniao.Languages.pt_br.MemoPageTitle</h2>
+        <h2>@OrganizadorReuniao.Languages.pt_br.MemoPageTitle - @ViewBag.unitName</h2>
     </div>
     <div class="col-md-4">
         <label><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;&nbsp;Data</label>
