Add forgot my password feature

--- a/OrganizadorReuniao/Views/Account/Login.cshtml
+++ b/OrganizadorReuniao/Views/Account/Login.cshtml
@@ -35,4 +35,8 @@
     <hr />
     
     <button type="submit" class="btn btn-primary">@OrganizadorReuniao.Languages.pt_br.SignInButton</button>
+    
+    <br />
+    <br />
+    @Html.ActionLink("Esqueci minha senha", "ForgotPassword")
 }
