--- a/OrganizadorReuniao/Views/Shared/_Layout.cshtml
+++ b/OrganizadorReuniao/Views/Shared/_Layout.cshtml
@@ -1,5 +1,15 @@
 ﻿@{
-    bool authenticated = (Session["user"] != null);
+    OrganizadorReuniao.Models.User user = null;
+    if (Session["user"] != null)
+    {
+        user = (OrganizadorReuniao.Models.User)Session["user"];
+    }
+    bool authenticated = (user != null);
+    bool isAdmin = false;
+    if (user != null && user.isAdmin)
+    {
+        isAdmin = true;
+    }
         // TODO: change strings tp resource names
 }
 <!DOCTYPE html>
@@ -44,11 +54,16 @@
                     <li><a href="#contact">Contato</a></li>*@
                     @if (authenticated)
                     {
+                        if (isAdmin)
+                        {
                         <li><a href="/Memo/Index">Agenda</a></li>
                         <li><a href="/Activities/Index">Atividades</a></li>
                         <li><a href="/Calling/Index">Chamados</a></li>
+                        }
                         <li><a href="/Home/Index">Frequência</a></li>
                         
+                        if (isAdmin)
+                        {
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Relatório <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -65,7 +80,8 @@
                                 @*<li><a href="#" onclick="alert('Funcionalidade em Desenvolvimento')">Subir Lista Membro</a></li>*@
                             </ul>
                         </li>
-                            @*<li class="dropdown">
+                        }
+@*<li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuracoes <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Atualizar Dados</a></li>
